# tfm-deteccion-alucinaciones-tda

./: .gitignore  LICENSE  README.md  requirements.txt
code/: pyproject.toml
code/notebooks/: 01_complejos_simpliciales.py  02_homologia_persistente.py  03_atencion_a_grafo.py  04_pipeline_atencion_real.py  05_pipeline_halluzig.py  06_comparativa_metodos.py
code/scripts/: 00_check_env.py  05_generate.py  05_generate_squad.py  05_generate_xquad.py  10_extract.py  11_selfcheck.py  20_evaluate.py  21_pool.py  22_zeroshot.py  23_transfer.py  30_aggregate.py  41_figures_model.py  42_master_table.py  smoke_memerag_extract.py  smoke_memerag_gen.py  smoke_test_attention.py  smoke_test_gemma.py  test_halluzig_zigzag.py
code/tfm_hallu/: __init__.py  config.py  labeling.py  viz.py
code/tfm_hallu/data/: __init__.py  base.py  halueval.py  halueval_gen.py  memerag.py  much.py  mushroom.py  squad.py  xquad.py
code/tfm_hallu/evaluation/: __init__.py  folds.py  metrics.py  pooling.py  runner.py  transfer.py
code/tfm_hallu/extraction/: __init__.py  attention.py  generate.py  hidden.py  model.py
code/tfm_hallu/io/: __init__.py  layout.py
code/tfm_hallu/methods/: __init__.py  halluzig.py  halluzig_score.py  lapeigvals.py  lapeigvals_score.py  selfcheckgpt.py  seps_score.py  toha.py  toha_score.py
code/tfm_hallu/topology/: __init__.py  persistence.py  vectorization.py  zigzag.py
data/results/metrics/: detection.parquet  efficiency.parquet  pooled.parquet  topological.parquet
data/results/scores/: gemma3-4b_halueval-qa-gen_halluzig.parquet  gemma3-4b_much-en_seps.parquet  (+83 more)
(+31 files in other folders)
